2003-04-25  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclBasic.c:  Tcl_EvalObjv() failed to honor the
	TCL_EVAL_GLOBAL flag when resolving command names.  Tcl_EvalEx
	passed a string rep including leading whitespace and comments
	to TclEvalObjvInternal().

2003-04-25  Andreas Kupries  <andreask@activestate.com>

	* win/tclWinThrd.c: Applied SF patch #727271. This patch changes
	  the code to catch any errors returned by the windows functions
	  handling TLS ASAP instead of waiting to get some mysterious
	  crash later on due to bogus pointers. Patch provided by Joe
	  Mistachkin.

	  This is a stop-gap measure to deal with the low number of ?TLS
	  slots provided by some of the variants of Windows (60-80).

2003-04-24  Vince Darley  <vincentdarley@users.sourceforge.net>

	* generic/tclFileName.c: fix to bug reported privately by
	Jeff where, for example, 'glob -path {[tcl]} *' gets confused
	by the leading special character (which is escaped internally),
	and instead lists files in '/'.  Bug only occurs on Windows 
	where '\' is also a directory separator.
	* tests/fileName.test: added test for the above bug.
	
2003-04-22  Andreas Kupries  <andreask@activestate.com>

	* The changes below fix SF bugs [593810], and [718045].

	* generic/tclIO.c (Tcl_CutChannel, Tcl_SpliceChannel):
	  Invoke TclpCutSockChannel and TclpSpliceSockChannel.

	* generic/tclInt.h: Declare TclpCutSockChannel and
	  TclpSpliceSockChannel.

	* unix/tclUnixSock.c (TclpCutSockChannel, TclpSpliceSockChannel):
	  Dummy functions, on unix the sockets are _not_ handled
	  specially.

	* mac/tclMacSock.c (TclpCutSockChannel, TclpSpliceSockChannel):
	* win/tclWinSock.c (TclpCutSockChannel, TclpSpliceSockChannel):
	  New functions to handle socket specific cut/splice operations:
	  auto-initi of socket system for thread on splice, management of
	  the module internal per-thread list of sockets, management of
	  association of sockets with HWNDs for event notification.
